Fix sidebar covering border of navbar

--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -28,6 +28,10 @@ body {
   }
 }
 
+.navbar-portal {
+    border-bottom: 2px solid lightgrey;
+}
+
 .navbar-top-links {
   margin-right: 0;
 }
@@ -133,7 +137,7 @@ body {
     z-index: 1;
     position: absolute;
     width: 250px;
-    margin-top: 51px;
+    margin-top: 54px;
   }
 
   .navbar-top-links .dropdown-messages,
